--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
     <title>Sample App</title>
-    <link rel="stylesheet" type="text/css" href="styles/youtube.css">
+      <link rel="stylesheet" href="styles/main.css">
+      <link rel="stylesheet" href="styles/normalize.css">
+      <link rel="stylesheet" href="styles/bootstrap.css">
+      <link rel="stylesheet" type="text/css" href="styles/youtube.css">
   </head>
   <body>
     <div id='root'>
